Students can use this online math tool to help them solve 2 and 3 digit subtraction problems using the HTO strategy.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="index_hype_container" style="margin:auto;position:relative;width:1024px;height:768px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?2162"></script>
+		<script type="text/javascript" charset="utf-8" src="index.hyperesources/index_hype_generated_script.js?70728"></script>
 	</div>
 
 	<!-- end copy -->
@@ -36,10 +36,11 @@
 	<div style="display:none" aria-hidden=true>
 
 		<div>SUBTRACTION MANIPULATIVES TOOL</div>
+		<div>Click Here to See HOW TO USE THE TOOL</div>
 		<div>HTO STRATEGY (WITH REGROUPING)</div>
 		<div>HTO Strategy Videos</div>
-		<div>HTO STRATEGY (WITH NO REGROUPING)</div>
 		<div></div>
+		<div>HTO STRATEGY (WITH NO REGROUPING)</div>
 		<div>Tens
 Scribble
 </div>
@@ -48,6 +49,7 @@ Hundreds
 Scribble
 </div>
 		<div>HOME</div>
+		<div></div>
 		<div></div>
 		<div>10 Ones</div>
 		<div>Hundreds</div>
